--- a/src/app/gallery-tab/gallery-tab.page.html
+++ b/src/app/gallery-tab/gallery-tab.page.html
@@ -21,11 +21,11 @@
     </ion-row>
   </ion-grid>
 
-  <ion-fab vertical="bottom" horizontal="center" slot="fixed">
+  <!--<ion-fab vertical="bottom" horizontal="center" slot="fixed">
     <ion-fab-button (click)="addPhotoToGallery()">
       <ion-icon name="camera"></ion-icon>
     </ion-fab-button>
-  </ion-fab>
+  </ion-fab>-->
 
   <!--<app-explore-container name="Tab 2 page"></app-explore-container>-->
 </ion-content>
