--- a/src/app/gallery-tab/gallery-tab.page.html
+++ b/src/app/gallery-tab/gallery-tab.page.html
@@ -13,9 +13,9 @@
 
   <ion-grid>
     <ion-row>
-      @for(photo of photoService.photos; track photo.filepath; let position = $index) {
+      @for(photo of photos; track photo.filepath) {
         <ion-col size="6">
-          <ion-img [src]="photo.webviewPath" (click)="showActionSheet(photo, position)"></ion-img>
+          <ion-img [src]="photo.webviewPath" (click)="showActionSheet(photo)"></ion-img>
         </ion-col>
       }
     </ion-row>
