--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -5,14 +5,14 @@
       <ion-label>Tab 1</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2" href="/tabs/tab2">
+    <ion-tab-button tab="gallery" href="/tabs/gallery">
       <ion-icon aria-hidden="true" name="images"></ion-icon>
-      <ion-label>Photos</ion-label>
+      <ion-label>Gallery</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3" href="/tabs/tab3">
+    <ion-tab-button tab="receipts" href="/tabs/receipts">
       <ion-icon aria-hidden="true" name="square"></ion-icon>
-      <ion-label>Tab 3</ion-label>
+      <ion-label>Receipts</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
